# Echo_Tool_Systemv5

./: README.md
echo_rust_agent_proxy/: Cargo.toml  config.toml  main_system.txt
echo_rust_agent_proxy/src/: agent.rs  commands.rs  config.rs  json.rs  log.rs  main.rs  sessions.rs
