[package]
name = "echo_rust_wrapper"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking"] }
dirs-next = "2"
anyhow = "1"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
once_cell = "1.21.4"
uuid = "1.23.1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4.44"
